--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@
   --secondary: oklch(86.98% 0.136 152.34);
   --accent: oklch(85.20% 0.120 182.53);
   --background-light: oklch(60.88% 0.238 262.79);
+  --background-dark: oklch(0.2501 0.004 128.64);
 
   --radius: 0.625rem;
   --foreground: oklch(0.145 0 0);
