finish base comic layer

--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@
   --accent: oklch(85.20% 0.120 182.53);
   --background-light: oklch(60.88% 0.238 262.79);
   --background-dark: oklch(0.2501 0.004 128.64);
+  --background-game: oklch(0.5312 0.257306 262.5742);
 
   --radius: 0.625rem;
   --foreground: oklch(0.145 0 0);
